2018-06-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (draw_clip_arrow) term/lua.trm term/lua/gnuplot-tikz.lua

	Some terminals that provide a private term->arrow function were
	adversely affected by addition of flag HEADS_ONLY in commit ad80fe530.
	
	This commit does two things.
	1) It teaches the tikz terminal about HEADS_ONLY so that the short
	   vector variant works correctly.
	2) The core routine draw_clip_arrow only uses the 2-step drawing process
	   for vectors that are short (for a rather ad hoc definition of "short").

2018-05-16  Miroslav Sulc <msulc@users.sourceforge.net>

	* src/misc.c: Support ARGC/ARGV parameter convention for "call".
	I.e. string variables ARG1 ARG2 ... are also accessible as
	ARGV[1] ARGV[2] ... ARGV[ARGC].

2018-04-28  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.ac src/term.h:  ./configure --without-tektronix
	to disable support for various 1970s/80s era terminal emulators.
	Terminal types included (or not):
	  tek410x tek40 vttek xterm kc_tek40 km_tek40 selanar sixeltek bitgraph
	Notes:
	To actually include some of these it is also necessary to enable
	the generic bitmap code:
	  ./configure --with-tektronix --with-bitmap-terminals
	Unless for some reason you really need to communicate using tektronix
	terminal graphics protocol, the prefered option is to use a terminal
	emulator that supports the vt100 series sixel graphics protocol and
	select the sixelgd terminal in gnuplot.  You do not need the tektronix
	terminal code for this.

2018-04-16  Miroslav Sulc <msulc@users.sourceforge.net>

	* src/internal.c (f_div cmplx_divide):  Avoid overflow during complex
	division (actually all floating point division).
	Use formula 5.4.5 from Numerical Recipes 2nd Edition to prevent
	avoidable overflow, underflow, and/or loss of precision.
	E.g. the result of 1.e200/1.e200 is 1.0 rather than NaN, and
	1/1.e200 is 1.e-200 rather than 0.

2018-04-15  Miroslav Sulc <msulc@users.sourceforge.net>
