@@ -30,9 +30,6 @@
 /* Define to support boxed labels */
 #define EAM_BOXED_TEXT 1
 
-/* Define if color information should be passed for each vertex. */
-/* #undef EXTENDED_COLOR_SPECS */
-
 /* Define if you want to supply pre-existing X11 windows. */
 /* #undef EXTERNAL_X11_WINDOW */
 
